--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--
-freenom.com OF cloudflare
-Github OF gitlab OF Github pages
--->
 <html lang="en">
   <head>
     <script
@@ -44,7 +40,7 @@ Github OF gitlab OF Github pages
             <h2>Total Level</h2>
             <div class="bar">
               <div>
-                <span class="amount">1724</span>
+                <span class="amount">1755</span>
                 <span>/</span>
                 <span class="total">2277</span>
               </div>
@@ -71,7 +67,7 @@ Github OF gitlab OF Github pages
         <h2>99 Farming</h2>
         <div class="bar">
           <div>
-            <span class="amount">95</span>
+            <span class="amount">97</span>
             <span>/</span>
             <span class="total">99</span>
           </div>
@@ -80,7 +76,7 @@ Github OF gitlab OF Github pages
         <h2>Base 80's</h2>
         <div class="bar">
           <div>
-            <span class="amount">5</span>
+            <span class="amount">6</span>
             <span>/</span>
             <span class="total">23</span>
           </div>
@@ -89,7 +85,7 @@ Github OF gitlab OF Github pages
         <h2>All Hard Diaries</h2>
         <div class="bar">
           <div>
-            <span class="amount">8</span>
+            <span class="amount">10</span>
             <span>/</span>
             <span class="total">12</span>
           </div>
@@ -113,7 +109,7 @@ Github OF gitlab OF Github pages
         <h2>Giant Mole</h2>
         <div class="bar">
           <div>
-            <span class="amount">178</span>
+            <span class="amount">200</span>
             <span>/</span>
             <span class="total">3000</span>
           </div>
@@ -122,7 +118,7 @@ Github OF gitlab OF Github pages
       </div>
     </main>
     <footer>
-      <p>Stats last updated on April 3rd - 2019.</p>
+      <p>Stats last updated on April 26th - 2019.</p>
       <p>Elempiar© 1842 - 2019</p>
     </footer>
   </body>
