--- a/index.html
+++ b/index.html
@@ -17,17 +17,9 @@
     </div>
     <nav>
       <a class="left" href="https://oldschool.runescape.com/" target="_blank"
-        ><img src="src/osrs_icon.png" width="40px" height="40px"
-      /></a>
-      <a class="right" href="https://twitter.com/elempiar" target="_blank"
-        ><img src="src/twitter_icon.png" width="40px" height="40px"
-      /></a>
-      <a
-        class="right"
-        href="https://crystalmathlabs.com/tracker/track.php?player=huell"
-        target="_blank"
-        ><img src="src/cml_icon.png" width="40px" height="40px"
-      /></a>
+        ><img src="src/osrs_icon.png" width="40px" height="40px"></a>
+      <a class="right" href="https://twitter.com/elempiar" target="_blank"><img src="src/twitter_icon.png" width="40px" height="40px"></a>
+      <a class="right" href="https://crystalmathlabs.com/tracker/track.php?player=huell" target="_blank"><img src="src/cml_icon.png" width="40px" height="40px"></a>
     </nav>
     <main>
       <div class="part">
@@ -72,7 +64,7 @@
           </div>
           <div class="progress" id="goalOne"></div>
         </div>
-        <h2>Base 80's</h2>
+          <h2>Base 80's</h2>
         <div class="bar">
           <div>
             <span class="amount">6</span>
@@ -154,5 +146,5 @@
       }
     };
     window.onscroll = checkProgressBars;
-  </script>
+  </script>  
 </html>
