--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8" />
     <title>OSRS - Huell</title>
     <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
   </head>
   <body>
     <div id="hero">
